--- a/angular.json
+++ b/angular.json
@@ -110,5 +110,8 @@
       }
     }
   },
-  "defaultProject": "app"
+  "defaultProject": "app",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
