--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ngrx/effects": "^13.2.0",
+    "@ngrx/store": "^13.2.0",
     "@shoelace-style/shoelace": "^2.0.0-beta.77",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -27,6 +29,7 @@
     "@angular-devkit/build-angular": "~13.3.8",
     "@angular/cli": "~13.3.7",
     "@angular/compiler-cli": "~13.3.0",
+    "@ngrx/schematics": "^13.2.0",
     "@tailwindcss/forms": "^0.5.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
