--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "@ngrx/effects": "^13.2.0",
     "@ngrx/store": "^13.2.0",
+    "@ngrx/store-devtools": "^13.2.0",
     "@shoelace-style/shoelace": "^2.0.0-beta.77",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
