--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "css.lint.unknownAtRules": "ignore",
-    "html.customData": [
-        "./node_modules/@shoelace-style/shoelace/dist/vscode.html-custom-data.json"
-      ]
+    "css.lint.unknownAtRules": "ignore"
 }
