--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ngrx/effects": "^13.2.0",
     "@ngrx/store": "^13.2.0",
     "@ngrx/store-devtools": "^13.2.0",
+    "@tailwindcss/typography": "^0.5.4",
+    "daisyui": "^2.20.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
